Kubernetes/hello-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: demo-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1


spec: 
  rules: 
    - http: 
        paths: 
        - pathType: Prefix 
          path: "/hello-ingress/(.*)"
          backend:
            service: 
              name: hello-service 
              port: 
                number: 80
